# k8s-valkey-operator

./: .clippy.toml  .cursorrules  .dockerignore  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  GUIDE.md  LICENSE  Makefile  README.md  bundle.Dockerfile
.claude/: settings.json
.claude/agents/: kubernetes-specialist.md  platform-engineer.md  rust-engineer.md
.contributor/: pr-body.md
.cursor/: environment.json
.cursor/agents/: kubernetes-specialist.md  platform-engineer.md  rust-engineer.md
.cursor/rules/: agent-environment.mdc  architecture.mdc  coding-preferences.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: bundle-validate.yml  ci.yml  integration.yml  release.yml  secure_workflows.yml
bundle/manifests/: valkey-operator.clusterserviceversion.yaml  valkeyupgrades.valkey-operator.smoketurner.com.yaml
bundle/metadata/: annotations.yaml
charts/my-operator/: Chart.yaml  values.yaml
charts/my-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/valkey-operator/: Chart.yaml  values.yaml
charts/valkey-operator/crds/: valkeycluster.yaml  valkeyupgrade.yaml
charts/valkey-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
config/crd/: myresource.yaml  valkeycluster.yaml
config/deploy/: deployment.yaml  namespace.yaml  networkpolicy.yaml  webhook.yaml
config/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
config/samples/: my-resource.yaml  valkeycluster.yaml
docs/: cluster-operations.md  features.md  state-machines.md
docs/plans/: valkey-operator-implementation-plan.md
src/: health.rs  lib.rs  main.rs
src/client/: cluster_ops.rs  cluster_state.rs  mod.rs  parsing.rs  scaling.rs  types.rs  valkey_client.rs
src/controller/: cluster_init.rs  cluster_phases.rs  cluster_reconciler.rs  cluster_state_machine.rs  cluster_topology.rs  cluster_validation.rs  common.rs  context.rs  diagnostic_hints.rs  error.rs  mod.rs  operation_coordination.rs  operation_lock.rs  reconciler.rs  state_machine.rs  status.rs  tls_status.rs  transport.rs  upgrade_reconciler.rs  upgrade_state_machine.rs  validation.rs
src/controller/cluster_reconciler/: deletion.rs  scaling.rs  status.rs
src/crd/: conditions.rs  mod.rs  newtypes.rs  valkey_cluster.rs  valkey_upgrade.rs
src/resources/: certificate.rs  common.rs  mod.rs  pdb.rs  port_forward.rs  services.rs  statefulset.rs
src/slots/: distribution.rs  migration.rs  mod.rs  planner.rs
src/webhooks/: mod.rs  server.rs
src/webhooks/policies/: image_change.rs  immutability.rs  mod.rs  replicas.rs  upgrade_protection.rs
tests/common/: fixtures.rs  mod.rs
tests/functional/: main.rs  mock_state.rs  phase_handler_tests.rs  scenario_tests.rs  topology_tests.rs
tests/integration/: assertions.rs  cluster.rs  data_tests.rs  failure_tests.rs  fixtures.rs  functional_tests.rs  main.rs  namespace.rs  operator.rs  scaling_tests.rs  slot_tests.rs  tls_tests.rs  upgrade_failure_tests.rs  upgrade_rollback_tests.rs  upgrade_tests.rs  wait.rs
tests/proptest/: mod.proptest-regressions  mod.rs
tests/unit/: mod.rs
