[package]
name = "my-operator"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A Kubernetes operator for managing MyResource custom resources"
license = "MIT"

[dependencies]
# Kubernetes
# Using kube-rs 2.x with k8s-openapi 0.26.x (v1_34).
# Note: kube-leader-election and kube-lease-manager are pinned to kube 2.x.
# Upgrade to kube 3.x when leader election crates add support.
# See kube-rs release notes: https://github.com/kube-rs/kube/releases
kube = { version = "=2.0.1", default-features = false, features = ["runtime", "derive", "client", "rustls-tls", "aws-lc-rs", "ws", "unstable-runtime", "admission"] }
k8s-openapi = { version = "=0.26.1", default-features = false, features = ["v1_34"] }

# Async runtime
tokio = { version = "=1.49.0", default-features = false, features = ["full"] }
futures = { version = "=0.3.31", default-features = false }

# Serialization
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.149", default-features = false }
schemars = { version = "=1.2.0", default-features = false }

# Error handling
thiserror = { version = "=2.0.17", default-features = false }

# Logging/Tracing
tracing = { version = "=0.1.44", default-features = false }
tracing-subscriber = { version = "=0.3.22", default-features = false, features = ["std", "fmt", "env-filter", "json"] }

# HTTP server for health endpoints and metrics
axum = { version = "=0.8.8", default-features = false, features = ["http1", "tokio", "json"] }
axum-server = { version = "=0.8.0", default-features = false, features = ["tls-rustls-no-provider"] }
prometheus-client = { version = "=0.24.0", default-features = false }
rustls-pemfile = { version = "=2.2.0", default-features = false, features = ["std"] }

# TLS crypto backend for rustls
rustls = { version = "=0.23.36", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }

# Utilities
jiff = { version = "=0.2.16", default-features = false, features = ["std"] }
rand = { version = "=0.9.2", default-features = false }

# Leader election
kube-leader-election = { version = "=0.42.0", default-features = false }
hostname = { version = "=0.4.2", default-features = false }

[dev-dependencies]
tokio-test = { version = "=0.4.5", default-features = false }
uuid = { version = "=1.19.0", default-features = false, features = ["v4"] }
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }

[lints.clippy]
# Panic-prevention lints
# See: https://blog.reverberate.org/2025/02/03/no-panic-rust.html
#
# Production code must never panic. These lints enforce panic-free patterns.
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"

# Panic patterns inside Result-returning functions
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
get_unwrap = "deny"

# Indexing can panic - use .get() instead
indexing_slicing = "deny"

# String slicing can panic on non-UTF8 boundaries
string_slice = "warn"

[lints.rust]
# Unsafe code restrictions
unsafe_code = "deny"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "proptest"
path = "tests/proptest/mod.rs"
